--- a/portfolio.html
+++ b/portfolio.html
@@ -104,12 +104,11 @@
               </div>
               <div class="col-sm-6 col-md-4">
                 <div class="card" style="width: 14rem;">
-                  <img src="assets/images/portfolioholder 2.jpg" class="card-img-top" width="200" height="200">
+                  <img src="assets/images/walkingdead.jfif" class="card-img-top" width="200" height="200">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Trivia Game</h5>
+                    <p class="card-text">How Well Do You Know The Walking Dead.</p>
+                    <a href="#" class="btn btn-primary">Walking Dead Trivia</a>
                   </div>
                 </div>
               </div>
